<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".view.SplashScreen">
    <ImageView
        android:id="@+id/top_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/top_1"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/top_header"
        />
    <ImageView
        android:id="@+id/bottom_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/bottom_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/bottom_footer"
        />

    <TextView
        android:id="@+id/header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uiLoverText"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="48sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_image_view" />
    <TextView
        android:id="@+id/subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vision_for"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>