<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="isNewUSer"
            type="boolean" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.LoginSignUpScreen">
    <ImageView
        android:id="@+id/header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/top_2"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/uiLover_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_tv"
        android:text="@string/uiLoverText"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/orange"/>
    <TextView
        android:id="@+id/activity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiLover_tv"
        android:text="@string/activity_text"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_tv"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"
        android:background="@drawable/edit_text_box_layout"
        android:hint="@string/email_text"
        android:textColorHint="@color/grey"
        android:singleLine="true"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="14dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="14dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:background="@drawable/edit_text_box_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_tv"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password_text"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/confirm_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="14dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        isVisible = "@{isNewUSer}"
        android:background="@drawable/edit_text_box_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_tv"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/confirm_password_text"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_tv"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/red"
        android:text="@string/forgot_password_text"/>
    <TextView
        android:id="@+id/recovery_tv"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_tv"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        isVisible = "@{!isNewUSer}"
        android:textColor="@color/black"
        android:text="@string/forgot_password_text"/>

    <View
        android:id="@+id/view_one"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toStartOf="@+id/login_with_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_with_tv"
        app:layout_constraintBottom_toBottomOf="@+id/login_with_tv"/>
    <View
        android:id="@+id/view_two"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toTopOf="@+id/login_with_tv"
        app:layout_constraintBottom_toBottomOf="@+id/login_with_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_with_tv"
        />
    <TextView
        android:id="@+id/login_with_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        tools:text="@string/or_login_with"
        loginWith = "@{isNewUSer}"
        app:layout_constraintTop_toBottomOf="@+id/recovery_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_blue"
        tools:text="@string/login"
        loginButtonText="@{isNewUSer}"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_with_tv"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/no_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        tools:text="@string/no_account_text"
        hasAccount = "@{isNewUSer}"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>
    <TextView
        android:id="@+id/signUp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/signup"
        loginSignUpSwitch = "@{isNewUSer}"
        android:textColor="@color/violet_blue"
        app:layout_constraintTop_toBottomOf="@id/no_account_tv"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>