<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.uilover.viewmodel.HomeScreenViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhite"
    android:paddingHorizontal="20dp"
    tools:context=".view.HomeScreen">

    <View
        android:id="@+id/grey_card"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/grey_rectangular_card_drawable"/>

    <TextView
        android:id="@+id/good_morning_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/grey_card"
        app:layout_constraintTop_toTopOf="@+id/grey_card"
        app:layout_constraintEnd_toEndOf="@+id/grey_card"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:text="@string/good_morning"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/image_Card"
        android:layout_width="159dp"
        android:layout_height="218dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:elevation="2dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintStart_toStartOf="@+id/grey_card"
        app:layout_constraintTop_toBottomOf="@+id/good_morning_tv">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_picture"
            imageResource = "@{viewmodel.binder.image}"
            tools:src="@drawable/profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@{viewmodel.binder.username}"
        tools:text="Sara\nAnderson"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/image_Card"
        app:layout_constraintEnd_toEndOf="@+id/grey_card"
        app:layout_constraintTop_toTopOf="@+id/image_Card"/>

    <ImageView
        android:id="@+id/fav_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/fav"
        android:contentDescription="@string/fav_icon"
        app:layout_constraintStart_toEndOf="@+id/image_Card"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <ImageView
        android:id="@+id/profile_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/profile_btn"
        android:contentDescription="@string/profile_icon"
        app:layout_constraintStart_toEndOf="@+id/fav_ic"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/yellow_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:elevation="2dp"
        app:cardCornerRadius="18dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@+id/profile_ic">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            >
            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner_title"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               />
            <TextView
                android:id="@+id/percentage_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/violet_blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_tv"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percentage_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <ImageView
                android:id="@+id/banner_logo_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/logo_banner"
                android:contentDescription="@string/banner_image"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <GridView
        android:id="@+id/icons_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:numColumns="3"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>